# portal-da-transparencia

./: .gitignore  README.md  pyproject.toml
check_cities/: generate_spider.py  result.csv  scrapy.cfg  territories_short.csv
check_cities/check_cities/: items.py  middlewares.py  pipelines.py  settings.py
check_cities/check_cities/spiders/: city_checker_spider.py
check_cities/generated_spiders/: ap_tartarugalzinho.py  ba_angical.py  ba_botupora.py  ba_caturama.py  ba_conde.py  ba_ibitiara.py  ba_jaborandi.py  ba_novo_horizonte.py  ba_paramirim.py  ba_piritiba.py  ba_rio_do_pires.py  ba_santa_maria_da_vitoria.py  ba_santa_rita_de_cassia.py  ba_utinga.py  ba_varzea_da_roca.py  ba_varzea_do_poco.py  ba_wanderley.py  pe_ipubi.py  pr_reboucas.py  rj_areal.py  rj_cabo_frio.py  rj_comendador_levy_gasparian.py  rj_sapucaia.py  rs_pinto_bandeira.py  sp_bebedouro.py  sp_dois_corregos.py
tests/: test_portal_da_transparencia.py
